<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jeremy.polytech.btmat256v5.UI.PatternSaveActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hint_SavePatternTextView"
        android:text="@string/hint_save_pattern"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PatternNameEditText"
        android:hint="@string/pattern_name"
        android:layout_below="@+id/hint_SavePatternTextView"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSavePattern"
        android:text="@string/btn_save_pattern"
        android:layout_below="@+id/PatternNameEditText"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
